src/snapshots/tests__fof_logic_formula-4.snap
---
source: src/tests.rs
expression: parsed
---
Assoc(
    Or,
    [
        Proposition(
            LowerWord(
                "p",
            ),
        ),
        Proposition(
            LowerWord(
                "q",
            ),
        ),
        Proposition(
            LowerWord(
                "r",
            ),
        ),
    ],
)
