src/snapshots/tests__fof_logic_formula-5.snap
---
source: src/tests.rs
expression: parsed
---
Binary(
    Assoc(
        And(
            FofAndFormula(
                [
                    Unitary(
                        Atomic(
                            Plain(
                                FofPlainAtomicFormula(
                                    Constant(
                                        Functor(
                                            Lower(
                                                LowerWord(
                                                    "p",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                    Unitary(
                        Atomic(
                            Plain(
                                FofPlainAtomicFormula(
                                    Constant(
                                        Functor(
                                            Lower(
                                                LowerWord(
                                                    "q",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
