src/snapshots/tests__fof_logic_formula-6.snap
---
source: src/tests.rs
expression: parsed
---
NonAssoc(
    LRImplies,
    Unary(
        Not,
        Proposition(
            LowerWord(
                "p",
            ),
        ),
    ),
    Proposition(
        LowerWord(
            "q",
        ),
    ),
)
