src/snapshots/tests__fof_logic_formula-7.snap
---
source: src/tests.rs
expression: parsed
---
Binary(
    Assoc(
        Or(
            FofOrFormula(
                [
                    Unitary(
                        Atomic(
                            Plain(
                                FofPlainAtomicFormula(
                                    Constant(
                                        Constant(
                                            Functor(
                                                Lower(
                                                    LowerWord(
                                                        "p",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                    Unitary(
                        Atomic(
                            Plain(
                                FofPlainAtomicFormula(
                                    Constant(
                                        Constant(
                                            Functor(
                                                Lower(
                                                    LowerWord(
                                                        "q",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                    Unitary(
                        Atomic(
                            Plain(
                                FofPlainAtomicFormula(
                                    Constant(
                                        Constant(
                                            Functor(
                                                Lower(
                                                    LowerWord(
                                                        "r",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
