src/snapshots/tests__fof_logic_formula-9.snap
---
source: src/tests.rs
expression: parsed
---
Unitary(
    Atomic(
        Plain(
            FofPlainAtomicFormula(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "p",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
