src/snapshots/tests__fof_logic_formula.snap
---
source: src/tests.rs
expression: parsed
---
Unary(
    Not,
    Proposition(
        LowerWord(
            "p",
        ),
    ),
)
