src/snapshots/tests__fof_or_formula.snap
---
source: src/tests.rs
expression: parsed
---
FofOrFormula(
    [
        Unitary(
            Atomic(
                Plain(
                    FofPlainAtomicFormula(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "p",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        Unitary(
            Atomic(
                Plain(
                    FofPlainAtomicFormula(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "q",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        Unitary(
            Atomic(
                Plain(
                    FofPlainAtomicFormula(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "r",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
