src/snapshots/tests__fof_plain_term-2.snap
---
source: src/tests.rs
expression: parsed
---
Functor(
    LowerWord(
        "f",
    ),
    [],
)
