src/snapshots/tests__fof_plain_term-3.snap
---
source: src/tests.rs
expression: parsed
---
Functor(
    LowerWord(
        "f",
    ),
    [
        Variable(
            Variable(
                "X",
            ),
        ),
    ],
)
