src/snapshots/tests__fof_plain_term-4.snap
---
source: src/tests.rs
expression: parsed
---
Functor(
    LowerWord(
        "f",
    ),
    [
        Variable(
            Variable(
                "X",
            ),
        ),
        Functor(
            LowerWord(
                "g",
            ),
            [
                Variable(
                    Variable(
                        "Y",
                    ),
                ),
            ],
        ),
    ],
)
