src/snapshots/tests__fof_plain_term.snap
---
source: src/tests.rs
expression: parsed
---
Constant(
    Functor(
        Lower(
            LowerWord(
                "c",
            ),
        ),
    ),
)
