src/snapshots/tests__fof_quantified_formula-2.snap
---
source: src/tests.rs
expression: parsed
---
Quantified(
    Exists,
    [
        Variable(
            "X",
        ),
        Variable(
            "Y",
        ),
        Variable(
            "Z",
        ),
    ],
    Boolean(
        true,
    ),
)
